Reading Data with min and max finding location using loc and retrieving certain row

--- a/Day-71/DataAnalysis For Day-70/main.ipynb
+++ b/Day-71/DataAnalysis For Day-70/main.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "99eef61d",
+   "id": "6a682cb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c9d548a",
+   "id": "6c533a3f",
    "metadata": {},
    "source": [
     "Import Pandas library as pd"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bb4543f2",
+   "id": "858757fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0508e73",
+   "id": "071bd74e",
    "metadata": {},
    "source": [
     "Read A CSV data from file and save it in a variable called data"
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5fa26e14",
+   "id": "c8b606cf",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c48c6a58",
+   "id": "e9810ffc",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6ca65496",
+   "id": "480f8925",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eee5c66d",
+   "id": "a36e39fd",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "afefcb16",
+   "id": "fc794d08",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "68c45469",
+   "id": "cdd59a02",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d3689f22",
+   "id": "03053c07",
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "47ed1046",
+   "id": "2bdb7984",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "81839c4f",
+   "id": "9059de01",
    "metadata": {},
    "outputs": [
     {
@@ -1686,8 +1686,357 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "1b37237b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     46000.0\n",
+       "1     57700.0\n",
+       "2     42600.0\n",
+       "3     36800.0\n",
+       "4     41600.0\n",
+       "5     35800.0\n",
+       "6     38800.0\n",
+       "7     43000.0\n",
+       "8     63200.0\n",
+       "9     42600.0\n",
+       "10    53900.0\n",
+       "11    38100.0\n",
+       "12    61400.0\n",
+       "13    55900.0\n",
+       "14    53700.0\n",
+       "15    35000.0\n",
+       "16    35900.0\n",
+       "17    50100.0\n",
+       "18    34900.0\n",
+       "19    60900.0\n",
+       "20    38000.0\n",
+       "21    37900.0\n",
+       "22    47900.0\n",
+       "23    39100.0\n",
+       "24    41200.0\n",
+       "25    43500.0\n",
+       "26    35700.0\n",
+       "27    38800.0\n",
+       "28    39200.0\n",
+       "29    37800.0\n",
+       "30    57700.0\n",
+       "31    49100.0\n",
+       "32    36100.0\n",
+       "33    40900.0\n",
+       "34    35600.0\n",
+       "35    49200.0\n",
+       "36    40800.0\n",
+       "37    45400.0\n",
+       "38    57900.0\n",
+       "39    35900.0\n",
+       "40    54200.0\n",
+       "41    39900.0\n",
+       "42    39900.0\n",
+       "43    74300.0\n",
+       "44    50300.0\n",
+       "45    40800.0\n",
+       "46    35900.0\n",
+       "47    34100.0\n",
+       "48    36500.0\n",
+       "49    34000.0\n",
+       "Name: Starting Median Salary, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df[\"Starting Median Salary\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8038203f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                               Accounting\n",
+       "1                    Aerospace Engineering\n",
+       "2                              Agriculture\n",
+       "3                             Anthropology\n",
+       "4                             Architecture\n",
+       "5                              Art History\n",
+       "6                                  Biology\n",
+       "7                      Business Management\n",
+       "8                     Chemical Engineering\n",
+       "9                                Chemistry\n",
+       "10                       Civil Engineering\n",
+       "11                          Communications\n",
+       "12                    Computer Engineering\n",
+       "13                        Computer Science\n",
+       "14                            Construction\n",
+       "15                        Criminal Justice\n",
+       "16                                   Drama\n",
+       "17                               Economics\n",
+       "18                               Education\n",
+       "19                  Electrical Engineering\n",
+       "20                                 English\n",
+       "21                                    Film\n",
+       "22                                 Finance\n",
+       "23                                Forestry\n",
+       "24                               Geography\n",
+       "25                                 Geology\n",
+       "26                          Graphic Design\n",
+       "27              Health Care Administration\n",
+       "28                                 History\n",
+       "29                   Hospitality & Tourism\n",
+       "30                  Industrial Engineering\n",
+       "31             Information Technology (IT)\n",
+       "32                         Interior Design\n",
+       "33                 International Relations\n",
+       "34                              Journalism\n",
+       "35    Management Information Systems (MIS)\n",
+       "36                               Marketing\n",
+       "37                                    Math\n",
+       "38                  Mechanical Engineering\n",
+       "39                                   Music\n",
+       "40                                 Nursing\n",
+       "41                               Nutrition\n",
+       "42                              Philosophy\n",
+       "43                     Physician Assistant\n",
+       "44                                 Physics\n",
+       "45                       Political Science\n",
+       "46                              Psychology\n",
+       "47                                Religion\n",
+       "48                               Sociology\n",
+       "49                                 Spanish\n",
+       "Name: Undergraduate Major, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df[\"Undergraduate Major\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d2becc78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74300.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df[\"Starting Median Salary\"].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "611d9668",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df[\"Starting Median Salary\"].idxmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "eddcf60e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74300.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df[\"Starting Median Salary\"].loc[43]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "448cfb7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Undergraduate Major                  Physician Assistant\n",
+       "Starting Median Salary                           74300.0\n",
+       "Mid-Career Median Salary                         91700.0\n",
+       "Mid-Career 10th Percentile Salary                66400.0\n",
+       "Mid-Career 90th Percentile Salary               124000.0\n",
+       "Group                                               STEM\n",
+       "Name: 43, dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df.loc[43]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a547f230",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df[\"Mid-Career 10th Percentile Salary\"].idxmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5bd1d755",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Undergraduate Major                  Chemical Engineering\n",
+       "Starting Median Salary                            63200.0\n",
+       "Mid-Career Median Salary                         107000.0\n",
+       "Mid-Career 10th Percentile Salary                 71900.0\n",
+       "Mid-Career 90th Percentile Salary                194000.0\n",
+       "Group                                                STEM\n",
+       "Name: 8, dtype: object"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df.loc[8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2f2482be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34000.0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df[\"Starting Median Salary\"].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "662705d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df[\"Starting Median Salary\"].idxmin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1fd819f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Undergraduate Major                  Spanish\n",
+       "Starting Median Salary               34000.0\n",
+       "Mid-Career Median Salary             53100.0\n",
+       "Mid-Career 10th Percentile Salary    31000.0\n",
+       "Mid-Career 90th Percentile Salary    96400.0\n",
+       "Group                                   HASS\n",
+       "Name: 49, dtype: object"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df.loc[49]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e927bc9e",
+   "id": "da49f0b3",
    "metadata": {},
    "outputs": [],
    "source": []
