Day 72 Starting commits

--- a/Day-71/DataAnalysis For Day-70/main.ipynb
+++ b/Day-71/DataAnalysis For Day-70/main.ipynb
@@ -174,25 +174,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "92e1c20d",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'tuple' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m data\u001b[38;5;241m.\u001b[39mshape()\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object is not callable"
-     ]
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
     }
-   ],
-   "source": [
-    "data.shape()"
-   ]
+   },
+   "source": "data.shape",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -1838,10 +1828,10 @@
      "evalue": "name 'clean_df' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m clean_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStarting Median Salary\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mmax()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'clean_df' is not defined"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[10], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m clean_df[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mStarting Median Salary\u001B[39m\u001B[38;5;124m\"\u001B[39m]\u001B[38;5;241m.\u001B[39mmax()\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'clean_df' is not defined"
      ]
     }
    ],
